objects/ICR_History__c.object
<CustomObject>
    <fields>
        <fullName>AR_UWApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR UWApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if ASO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Account__r.Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ICR History</relationshipLabel>
        <relationshipName>ICR_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Accum_Date_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accum Date Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accum_Date_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accum Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accumulator_History_Load__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Accumulator History Load</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Entity</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_UW_to_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned to UW to Approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booklets_Per_Product__c</fullName>
        <label>Booklets Per Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broker_Change_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Change Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_ID_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass ID Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalCobra_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalCobra Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Description_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Description CA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Description_CO_NV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Description CO NV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_Email_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Creator Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_Enrollment_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DDS Enrollment Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDS_Group_Load_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DDS Group Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOH_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOH Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_RX_PCE_Coder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to RX PCE Coder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_RX_PCE_Queue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to RX PCE Queue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_UW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to UW</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_UW_queue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Assigned to UW queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_EBA_Logged__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date EBA Logged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pending_Correction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Pending Correction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Prepared__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Prepared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_UW_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date UW Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Over__c</fullName>
        <label>Days Over</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_First_Impression_Wellpoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental First Impression Wellpoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disability Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_on_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doc_Storage_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doc Storage System</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Partnership__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Domestic Partnership</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAP_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EAP Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_Contact_Sheet_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EA Contact Sheet Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Loaded_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EA Loaded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EA Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EA Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Welcome_Letters_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EA Welcome Letters Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBA_Clarifications__c</fullName>
        <label>Clarification(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBA_Logged_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EBA Logged By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC_Send_Hard_Copy_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EOC Send Hard Copy To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EOC Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronic_Copy_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Copy Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_MIS__c</fullName>
        <label>Eligibility MIS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligibility_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Billing_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E &amp; B Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_and_Billing_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E &amp; B Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Report_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Report Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Complete_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Associate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Associate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Impression_Wellpoint_SM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Impression Wellpoint-SM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former_Source_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Former Source ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Print_Quantities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Print Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grandfathered_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grandfathered List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Accepted_Company_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Accepted Company Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Division_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group/Division Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPCC_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IC_Pending_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IC Pending Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Card_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Card Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISNLT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISNLT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Control_Updated_WGS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Control Updated WGS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labor_Change_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Labor Change Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Change_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Change Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Carry_In_Date_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max Carry In Date Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Carry_In_Date_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max Carry In Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Carry_In__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Max Carry In</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Fund_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Fund Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Group Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_UW_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical UW Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Supply_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum Supply Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NP_EOC_Sales_Office_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NP EOC Sales Office Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NP_EOC_Sales_Office__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NP EOC Sales Office</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account_Executive_AE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Account Executive AE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account_Executive_Rep_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Account Executive Rep ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Acct_Mgr_Rep_ID_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Acct Mgr Rep ID Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Broker_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Broker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Brokerage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Brokerage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Business_Renewal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Business/Renewal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Dept_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Dept. Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Sales_Account_Rep_Acct_Mgmt_Rep_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Sales Account Rep - Acct Mgmt Rep ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sales_Account_Rep_Acct_Mgmt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Sales Account Rep - Acct Mgmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Change_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes Change Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Errors__c</fullName>
        <label>Number of Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_ICR_Owner_Changes__c</fullName>
        <label>Number of ICR Owner Changes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Standard_Books__c</fullName>
        <label># of Non Standard Books</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Standard_Books__c</fullName>
        <label># of Standard Books</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OAD_Requirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OAD Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_18_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity 18 ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Implementer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Implementer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Customer_Service_Numbers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Customer Service Numbers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Special_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Special Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paperwork_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paperwork Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_Rates_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partial Rates Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pooled_EOC_Not_Ordered_Due_to_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pooled EOC Not Ordered Due to Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pooled_EOC_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pooled EOC Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pooled_Non_Pooled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pooled/Non-Pooled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Executive__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Account Executive</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Account Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Broker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Broker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Brokerage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Brokerage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Account_Rep_Acct_Mgmt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Sales Account Rep - Acct Mgmt.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_and_Complete_Dental_Change_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime and Complete Dental Change Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probationary_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Probationary Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Change_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose of Change CA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Change_CO_NV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose of Change CO NV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Purpose of Request</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Completed_for_Off_Shore_Associates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Completed for Off-Shore Associates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Completed_for_OnShore_Associates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Completed for OnShore Associates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rates_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rates Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rerate_Month__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rerate Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Urgent_Approved_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rush Urgent Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rush Urgent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Account_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Parentage__c</fullName>
        <description>Identifies if in COMM1 SFDC Org, the record was a child of the Account or a child of the Opportunity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Legacy Parentage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Office</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Rates_to_Off_Shore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Rates to Off-Shore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_Products__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sold Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spanish_EOCs_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spanish EOCs Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spanish_EOCs_Date_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spanish EOCs Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spanish_EOCs_Date_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Spanish EOCs Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spanish_Translation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spanish Translation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submits_Eligibility_Via__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submits Eligibility Via</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Queue_to_Assigned_to_UW__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted to Queue to Assigned to UW</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_Count__c</fullName>
        <label>Suffix Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Docs_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Docs Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Days__c</fullName>
        <label>Target Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Enrollments_Submitted__c</fullName>
        <label>Total Enrollments Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>US_Network_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>US Network ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriter Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Support Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Support_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Support Approved</label>
        <type>Date</type>
    </fields>
</CustomObject>